--- a/.editorconfig
+++ b/.editorconfig
@@ -3,19 +3,24 @@ root = true
 
 # Common settings
 [*]
+charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-charset = utf-8
+
+# Markdown configuration
+[*.md]
+indent_size = 4
+trim_trailing_whitespace = false
 
 # python, js indentation settings
 [{*.py,*.js,*.vue,*.css,*.scss,*.html}]
-indent_style = tab
 indent_size = 4
+indent_style = tab
 max_line_length = 99
 
 # JSON files - mostly doctype schema files
-[{*.json}]
-insert_final_newline = false
-indent_style = space
+[*.json]
 indent_size = 2
+indent_style = space
+insert_final_newline = false
